# damn-vulnerable-MCP-server

./: .gitignore  README.md  main.py  pyproject.toml
challenges/easy/challenge1/: README.md  server_sse.py  server_stdio.py  server_streamable_http.py
challenges/easy/challenge2/: README.md  server_sse.py  server_stdio.py  server_streamable_http.py
challenges/easy/challenge3/: README.md  server_sse.py  server_stdio.py  server_streamable_http.py
challenges/hard/challenge10/: README.md  server_sse.py  server_stdio.py  server_streamable_http.py
challenges/hard/challenge8/: README.md  server_sse.py  server_stdio.py  server_streamable_http.py
challenges/hard/challenge9/: README.md  server_sse.py  server_stdio.py  server_streamable_http.py
challenges/medium/challenge4/: README.md  server_sse.py  server_stdio.py  server_streamable_http.py
challenges/medium/challenge5/: README.md  server_sse.py  server_stdio.py  server_streamable_http.py
challenges/medium/challenge6/: README.md  server_sse.py  server_stdio.py  (+1 more)
challenges/utilities/: UtilitiesForSSE.py  UtilitiesForStreamableHTTP.py
deployment/: docker-setup.md  local-setup.md
docker_configs/mcp_sse/: Dockerfile  requirements.txt
docker_configs/mcp_streamable_http/: Dockerfile  supervisord.conf
docs/: challenges.md  project_structure.md
standalone_mcp_client/: README.md  mcp_client_multi_server.py  multi_server_json_all_sse.config  multi_server_json_all_streamable_http.config  multi_server_json_stdio.config
start_servers/windows/: start_all_server_sse.ps1  start_all_server_streamable_http.ps1
(+4 files in other folders)
